# raylib-3d

./: .gitignore  :q  Makefile  README.md  a.out  custom_plane.h  jan  janperlin  janperlin.c  main  main.c  pyproject.toml  terrain  video_mesh.py
src/: custom_draw.c  custom_draw.h  janperlin.c  main.c  perlin.c  perlin.h
src/terrain/: janperlin.c  perlin.c
terrain/: base.frag  base.vert  base.vs  fog.frag  jan_terrain.c  janperlin.c  main.c  perlin.c  sun.frag  terrain.vs  tile.fs
