[tool.poetry]
name = "ray-3d"
version = "0.1.0"
description = ""
authors = ["Jan Beukes <beukes.janadam@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
raylib = "^5.0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
